<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/OutsideLayout">

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/taskInfoActivity_taskNameEditText"
			style="@style/EditTextStyle.Restrictive.Disabled"
			android:hint="@string/hint_taskName"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/taskInfoActivity_taskDescriptionEditText"
			style="@style/EditTextStyle.Restrictive.Description.Disabled"
			android:hint="@string/hint_taskDescription"/>

	</android.support.design.widget.TextInputLayout>

	<TableLayout
		style="@style/TableStyle"
		android:layout_marginEnd="@dimen/editTextMargin"
		android:layout_marginStart="@dimen/editTextMargin"
		android:layout_marginTop="@dimen/editTextMargin"
		android:stretchColumns="1">

		<TableRow
			style="@style/TableStyle.Row"
			android:paddingBottom="10dp">

			<TextView
				style="@style/TextStyle"
				android:layout_column="0"
				android:text="@string/hint_assigneeSpinner"/>

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/taskInfoActivity_assigneeSpinner"
				style="@style/SpinnerStyle"/>

		</TableRow>

		<TableRow
			style="@style/TableStyle.Row"
			android:paddingBottom="10dp">

			<TextView
				style="@style/TextStyle"
				android:layout_column="0"
				android:text="@string/hint_prioritySpinner"/>

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/taskInfoActivity_prioritySpinner"
				style="@style/SpinnerStyle"
				android:entries="@array/spinner_priority"/>

		</TableRow>

		<TableRow
			style="@style/TableStyle.Row"
			android:paddingBottom="10dp">

			<TextView
				style="@style/TextStyle"
				android:layout_column="0"
				android:text="@string/hint_columnSpinner"/>

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/taskInfoActivity_columnSpinner"
				style="@style/SpinnerStyle"/>

		</TableRow>

	</TableLayout>

	<RelativeLayout
		style="@style/BottomLayout">

		<Button
			android:id="@+id/taskInfoActivity_deleteTaskButton"
			style="@style/ButtonStyle.Sized"
			android:layout_alignParentStart="true"
			android:text="@string/button_removeTask"/>

		<Button
			android:id="@+id/taskInfoActivity_updateTaskButton"
			style="@style/ButtonStyle.Sized"
			android:layout_alignParentEnd="true"
			android:text="@string/button_updateTask"/>

		<Button
			android:id="@+id/taskInfoActivity_saveTaskButton"
			style="@style/ButtonStyle.Sized"
			android:layout_alignParentEnd="true"
			android:text="@string/button_saveTask"
			android:visibility="gone"/>

	</RelativeLayout>

</LinearLayout>
